Fix paper-dialog-scrollable divider styling
The top divider could get hidden by content in the scrollable region.

--- a/src/gui/html/css/style.css
+++ b/src/gui/html/css/style.css
@@ -278,3 +278,6 @@ editable-table paper-icon-button[icon=delete]:hover {
 editable-table paper-icon-button[icon=add]:hover {
     color: green;
 }
+paper-dialog-scrollable::before {
+    z-index: 1;
+}
